--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <body>
-
+ <button>Click me</button> 
 <h1>My First Heading</h1>
-
 <p>My first paragraph.</p>
 
 </body>
-</html>
+</html> 
