--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
  <!DOCTYPE html>
 <html>
 <body>
-    <a href="/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;                        <a href="/index.html">Resume</a>                    <a href="/index.html">Blog</a>                         <a href="/about/about_team.htm">Research</a>
+    <a href="/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/index.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/about_team.htm">Research</a>
  <button>Click me</button> 
-<h1>My First Headingjjj</h1>
+<h1>Juan Gonzalez De Mendoza</h1>
 <p>My first paragraph.</p>
  <button>Click me</button> 
-<img src="w3schools.jpg"
+<img src="/perfil.jpeg"> 
 </body>
 </html> 
