--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
- <!DOCTYPE html>
-<html>
-<body>
-    <a href="/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/index.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/about_team.htm">Research</a>
- <button>Click me</button> 
-<h1>Juan Gonzalez De Mendoza</h1>
-<p>My first paragraph.</p>
- <button>Click me</button> 
-<img src="/perfil.jpeg"> 
-</body>
-</html> 
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<HTML><HEAD><TITLE>Juan Gonzalez De Mendoza</TITLE>
+</HEAD>
+<BODY bgColor=white>
+<a href="/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/index.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/about_team.htm">Research</a>
+<TABLE cellSpacing=10>
+  <TBODY>
+  <TR border="0">
+    <TD vAlign=bottom border="0"><FONT face=Arial size=+3>Juan G Mendoza</FONT><IMG src="https://www.scottaaronson.com/100.jpg" ><IMG
+      src="perfil2.png" border=0 style="width:200px;height:145px;"></TD>
+  <TR>
+    <TD width=550 border="0">
+      <HR>
+      <br>I am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a PhD in physics. I have interest in researching complex quantum systems, implications of relativity on quantum systems and quantum information. 
+
+  <p><b>Background</b>
+  <ul>I was born and raised in Venezuela in a sugar cane farm and alcohol distillery Central Matilde built by my great grand parents after migrating from Cuba. Close to my highschool graduation, due to the deteriorating situation of the country, my parents decided it was best for me not get my undergraduate degree in Venezuela. I moved to Texas, spent 2 years in Austin Community College and transferred to UT as a Computer Science student. 
+  <br><br> Since highschool I have been very interested in Physics, but it wasn't until I transferred that I began to read books on quantum mechanics and found I was had a special passion for it. At that time, I knew if I did not pursue this passion, I would regret it later in my life. As I was only one year away from completing my Computer Science degree, I decided to add Physics as a second major. In an attempt to incorporate my knowledge from both degrees I started learning more about quantum computing</ul>
+
+     
+
+
+
+      <P><B>Contact</B>
+    <ul>
+      <p>The best way to reach me is via email:
+<br>juangmendoza@utexas.edu
+
+
+<br>Personal phone: (512)-988-2887
+
+
+</ul>
+
+</I></TD></TR></TBODY></TABLE></BODY></HTML>
