picture path fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <TBODY>
   <TR border="0">
     <TD vAlign=bottom border="0"><FONT face=Arial size=+3>Juan G Mendoza</FONT><IMG src="https://www.scottaaronson.com/100.jpg" ><IMG
-      src="perfil2.png" border=0 style="width:200px;height:145px;"></TD>
+      src="./perfil2.png" border=0 style="width:200px;height:145px;"></TD>
   <TR>
     <TD width=550 border="0">
       <HR>
