picture path fix 2

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <TBODY>
   <TR border="0">
     <TD vAlign=bottom border="0"><FONT face=Arial size=+3>Juan G Mendoza</FONT><IMG src="https://www.scottaaronson.com/100.jpg" ><IMG
-      src="/perfil2.png" border=0 style="width:200px;height:145px;"></TD>
+      src="www.juangmendoza.com/perfil2.png" border=0 style="width:200px;height:145px;"></TD>
   <TR>
     <TD width=550 border="0">
       <HR>
-      <br>I am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a PhD in physics. I have interest in researching complex quantum systems, implications of relativity on quantum systems and quantum information. 
+      <br>II am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a PhD in physics. I have interest in researching complex quantum systems, implications of relativity on quantum systems and quantum information. 
 
   <p><b>Background</b>
   <ul>I was born and raised in Venezuela in a sugar cane farm and alcohol distillery Central Matilde built by my great grand parents after migrating from Cuba. Close to my highschool graduation, due to the deteriorating situation of the country, my parents decided it was best for me not get my undergraduate degree in Venezuela. I moved to Texas, spent 2 years in Austin Community College and transferred to UT as a Computer Science student. 
