--- a/resume.html
+++ b/resume.html
@@ -8,8 +8,11 @@
   <TR border="0">
     <TD vAlign=bottom border="0"><FONT face=Arial size=+3>Juan G Mendoza</FONT><IMG src="https://www.scottaaronson.com/100.jpg" ><IMG
       src="Media/perfil2.PNG" border=0 style="width:200px;height:145px;"></TD>
+
   <TR>
+
     <TD width=700 border="0">
+      <a href="https://github.com/JuanGMendoza/">Github</a>
       <HR>
        
 
@@ -30,13 +33,13 @@
     <br>All the research below was conducted in <a href="https://chaos.utexas.edu/people/undergraduate-students/juan-gonzalez-de-mendoza">The Center for Nonlinear Dynamics</a> and The Center for Complex Quantum Systems at The University of Texas at Austin
     <ul>
     <li><i> Quantum Scattering</i>  &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Summer 2020 - Present
-    <br>Advisor: Dr. Reichl
+    <br>Advisor: <a href="http://order.ph.utexas.edu/people/Reichl.htm">Dr. Reichl</a>
 
       <br><br><ul>Analyzed Wigner and Einsenbud reaction matrix scattering theory to understand nuclear scaterring problems better.
       </ul>
 
     <br><li><i>Sub-Microscopic particle tracking</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Spring 2020 - Summer 2020
-    <br> Advisor: Dr. Florin
+    <br> Advisor: <a href="http://chaos.utexas.edu/people/faculty/ernst-ludwig-florin">Dr. Florin</a>
       <br><br><ul>This project was affected by the COVID-19 pandemic situation and could not finish it as all research labs were shut down. The goal was to be able to estimate the amount of particles moving between pixels by analyzing intensity fluctuations. This was due to the particles being too small for a DIC microscope to resolve. Check this <a href="index.html">post</a> to see more of what I managed to do in a month previous to the COVID-19 outbreak.
       </ul>
     <br><li> <i>Bacteria biofilm and evaporation hypothesis</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Spring 2019 - Fall 2019
@@ -89,7 +92,7 @@
 <p><b>Professional Affiliations </b>
 <li> <i><a href="https://ras.ece.utexas.edu/"> Robotics & Automation Society</a> at The University of Texas at Austin</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2018
 <ul>
-    Participated in the annual Robotathon sumo competition, where me and a partner had to build a fully automated robot from scratch. Each robot would fight one adversary at a time, while the goal was to stay inside the circle. Our robot can be depicted in the video below in white and blue.
+    Participated in the annual Robotathon sumo competition, where me and a partner had to build a fully automated robot from scratch. Each robot would fight one adversary at a time, while the goal was to stay inside the circle. Our robot can be depicted in the video below in white and blue.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <video width="320" height="240" controls src="Media/robotathon.mp4">
   
   Your browser does not support the video tag.
@@ -98,12 +101,38 @@
 
 <li> <i> Texas Transfer Students at The University of Texas at Austin</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2017 - 2018
   <ul>
-    TTS is a student organization dedicated to cater to the social and academic needs of all transfer students at UT. I was a mentor for new transfer students.
+    Mentored incoming transfer students to help them with the transition to a bigger university. TTS is a student organization dedicated to cater to the social and academic needs of all transfer students at UT. 
   </ul>
-<li> <i> <a href="https://planetlonghorn.org/">Planet Longhorn</a> at The University of Texas at Austin</i>
+<li> <i> <a href="https://planetlonghorn.org/">Planet Longhorn</a> at The University of Texas at Austin</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2017 - 2019
   <ul>
     Planet Longhorn is a student-run organization built to welcome, acclimate, and ultimately enhance the exchange experience of international students. 
   </ul>
+
+<hr>
+<p><b>Awards</b>
+  <li>Cisco's Supply Chain case competition 1st place</li>
+    <ul>Built a Python GUI tool for managers in Cisco to track their suppliers and alert them of any customizable relevant events that may affect Cisco's supply chain. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<IMG src="Media/CaseComp.png" border=0 style="width:376px;height:224px;"></ul>
+    <li> Best sensing and Control at RAS robotathon sumo competition</li>
+    <ul>This was awarded to the team that had the most precise and efficient sensing and control
+      <IMG src="Media/sensing.jpeg" border=0 style="width:250px;height:200px;">
+    </ul>
+
+<hr>
+<p><b>Relevant Coursework</b>
+  <ul>
+    Physics:
+    <ul>
+      <li>Quantum Mechanics I, <a href="https://en.wikipedia.org/wiki/Steven_Weinberg">Dr. Weinberg</a> (Graduate version)
+      <li>Quantum Information, <a href="https://en.wikipedia.org/wiki/Scott_Aaronson">Dr. Aaronson</a>
+      <li>Quantum Mechanics I, Dr. Caceres (Undergraduate version)
+      <li>Quantum Mechanics II, Dr. Yeazell
+      <li>Waves and Optics, Dr. Heinzen
+      <li>Modern Physics, Dr. Sitz
+      <li>Modern Physics Lab, Dr. Fink
+      <li>Classical Electrodynamics, Dr. Caceres
+    </ul>
+  </ul>
+
 <P><B>Contact</B>
     <ul>
       <p>The best way to reach me is via email:
