--- a/resume.html
+++ b/resume.html
@@ -111,7 +111,7 @@
 <hr>
 <p><b>Awards</b>
   <li>Cisco's Supply Chain case competition 1st place</li>
-    <ul>Built a Python GUI tool for managers in Cisco to track their suppliers and alert them of any customizable relevant events that may affect Cisco's supply chain. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<IMG src="Media/CaseComp.png" border=0 style="width:376px;height:224px;"></ul>
+    <ul>Built a Python GUI tool for managers in Cisco to track their suppliers and alert them of any customizable relevant events that may affect Cisco's supply chain. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<IMG src="Media/CaseComp.PNG" border=0 style="width:376px;height:224px;"></ul>
     <li> Best sensing and Control at RAS robotathon sumo competition</li>
     <ul>This was awarded to the team that had the most precise and efficient sensing and control
       <IMG src="Media/sensing.jpeg" border=0 style="width:250px;height:200px;">
