--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<HTML><HEAD><TITLE>Juan Gonzalez De Mendoza</TITLE>
+<HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
 </HEAD>
 <BODY bgColor=white>
 <a href="/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="./resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/about_team.htm">Research</a>
