--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<HTML><HEAD><TITLE>Juan Gonzalez De Mendoza</TITLE>
+<HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
 </HEAD>
 <BODY bgColor=white>
 <a href="index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/about_team.htm">Research</a>
@@ -43,7 +43,7 @@
       <br><br><ul>This project was affected by the COVID-19 pandemic situation and could not finish it as all research labs were shut down. The goal was to be able to estimate the amount of particles moving between pixels by analyzing intensity fluctuations. This was due to the particles being too small for a DIC microscope to resolve. Check this <a href="index.html">post</a> to see more of what I managed to do in a month previous to the COVID-19 outbreak.
       </ul>
     <br><li> <i>Bacteria biofilm and evaporation hypothesis</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Spring 2019 - Fall 2019
-    <br>Advisor: Dr. Florin 
+    <br>Advisor: <a href="http://chaos.utexas.edu/people/faculty/ernst-ludwig-florin">Dr. Florin</a>
       <br><br><ul> 
         Dr. Florin proposed that as bacteria cover a surface with biofilm, this would prevent vapor from escaping the surface, due to the benefits of a humid environment for the bacteria. I designed several experiments to test the evaporation rates of gel without bacteria as the control and gel with growing bacteria on the surface to compare their water evaporation rate. Unfortunately, no correlation was found between biofilm covered gel and evaporation rates.
       </ul>
