fixed top hyperlinks

--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
 </HEAD>
 <BODY bgColor=white>
-<a href="index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/about_team.htm">Research</a>
+<a href="index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/research.html">Research</a>
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
