finished bio research and changed to absolute paths

--- a/Research/dic.html
+++ b/Research/dic.html
@@ -1,9 +1,77 @@
-<HTML>
-<HEAD> <TITLE>Juan G Mendoza</TITLE> 
-<link rel="icon" href="../Media/icon.png"></HEAD>
-<BODY>
-	<h1>Hello</h1>
-  <IMG SRC="../Media/dic.gif"style="width:240px;height:424px;">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="../Media/icon.png">
+</HEAD>
+<BODY bgColor=white>
+<a href="www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/research.html">Research</a>
+	<h1>Sub-Microscopic particle tracking</h1>
+  
+  <TABLE cellSpacing=10>
+  	<p style="font-size:30px">
+  <tr>
+  	<td> <IMG SRC="../Media/dic.gif"style="width:240px;height:424px;"></td>
+  <TD width=700 border="0">
 
+<p style="font-size:25px"><br><br> My research advisor, Dr. Florin, came to me one day and proposed I worked on a project one of his previous graduate students (now Dr. Foote) left unfinished. The project consisted on analyzing pixel fluctuations of DIC microscopy images to determine the movement of particles that are too small to be resolved by the microscope. 
+</p>
+</TD>
+</tr>
+<tr>
+	<td colspan="2" width = 700>
+	<p style="font-size:25px">
+	<br>After a week or two of learning the physics behind DIC, we spent a good amount of time figuring out the equipment, since this project had been abandoned for a few years. We were able to find a procedure guide that was written by Dr. Foote on how to prepare the samples. These consisted of a droplet of water with plastic beads placed on top of a rectangular coverslip, which would then be covered with a circular coverslip. This can be depicted in the picture below.</p>
+	</td>
+</tr>
+<tr>
+	<td colspan="2">
+	<img src="../Media/sample.png">
+	</td>
+</tr>
+<tr>
+	<td colspan="2" width = 700><p style="font-size:25px">
+	<br> In order to prevent water from evaporating out of the sample, this needed to be sealed with vacuum grease around the edges of the circular coverslip. As one could imagine, this is very difficult since the circular coverslip is suspended on water, thus when applying a small force on the edge it would move instantly, and thus ruining the sample. Any attempt to hold the small coverslip while applying the grease with the other hand ended up getting the coverslip dirty, and thus making it harder to observe under the microscope. If I was going to observe hundreds of samples, I needed to improve this preparation protocol.
+	</td>
+</tr>
+
+<tr>
+	<td colspan="2" width = 700><p style="font-size:25px">
+	<br> I met a couple of times with Dr. Florin to come up with ideas to be able to hold our sample in place while applying the grease on it, and at the same time keeping it clean. I 3-D modeled all of our ideas on Fusion 360 and this is what we chose to build.
+	</td>
+</tr>
+<tr>
+	<td colspan="2" width = 700>
+	<img src="../Media/sample_holder.gif">
+	</td>
+</tr>
+<tr>
+	<td colspan="2" width = 700><p style="font-size:25px">
+	<br>Dr. Florin recommended we made it completely out of brass. This help our tight fits to be able to slide effortlesly. I sent the design to UT's workshop, and after a month they had it ready for me to pick up.
+	</td>
+</tr>
+<tr>
+	<td colspan="2" width = 700>
+	<img src="../Media/sample_holder2.jpeg" style="width:400px;height:533.33px;"><img src="../Media/sample_holder1.jpeg" style="width:400px;height:533.33px;">
+	
+	</td>
+
+</tr>
+<tr>
+	<td colspan="2" width = 700><p style="font-size:25px">
+	<br>  On the first picture above, the "piston" is upside down, this is how it should be in order to place the circular coverslip on top of it. This "piston" is hollow, this allows me to plug in a vacuum on the other end that will prevent the circular coverslip from falling. Then, the metal pins on the sides are removed, which allows me to rotate the middle piece 180&deg; and put the pins back in to guarantee correct positioning. There is a very thin O-ring at the end of the "piston" which makes contact with the circular coverslip, this allows us to make contact with it without getting it dirty. The weight of the piston will hold it in place, allowing me to rotate the bottom big cylinder and apply the grease around the coverslip.
+	</td>
+</tr>
+<tr>
+	<td colspan="2" width = 700>
+	<img src="../Media/sample_holder2.gif"style="width:400px;height:533.33px;">
+	</td>
+</tr>
+<tr>
+	<td colspan="2" width = 700><p style="font-size:25px">
+	Unfortunately, the video above was the last time I saw my beautiful sample holder. COVID-19 started spreading in the US and every lab on campus was closed. I had planned to continue working on this for a month, and then I would start working with Dr. Shankar, who is a new faculty member at UT, at a quantum computing lab in the UT Pickle research campus. These two projects got cancelled until further notice.
+
+<br><br> After a while, I found Dr. Reichl, and now I am doing research in quantum scattering with her, which I can do during quarantine as it does not require a lab. I think this ended up being the best for me because I think I will most likely end up doing research in theoretical physics. I wanted to try many different research areas before going to grad school to be sure of what I liked the most. Even though they have all been exciting, I think my heart lies in theoretical physics.
+	</td>
+</tr>
+
+</BODY>
 </BODY>
 </HTML>
