--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
 </HEAD>
 <BODY bgColor=white>
-<a href="index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/index.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/about/research.html">Research</a>
+<a href="www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/research.html">Research</a>
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
@@ -12,6 +12,6 @@
 
     <TD width=700 border="0">
     <HR>
-
+    The purpose of this section in my website is to have a keepsake for myself of all the research I have done. I will upload all new research I do here, specially as I start grad school in 2021.
   	<p><b>Biophysics</b>
   		<li> <a href="Research/dic.html"> Sub-Microscopic particle tracking</a>
