--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
 </HEAD>
 <BODY bgColor=white>
-<a href="index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/Blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="/research.html">Research</a>
+<a href="www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/research.html">Research</a>
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
@@ -40,7 +40,7 @@
 
     <br><li><i>Sub-Microscopic particle tracking</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Spring 2020 - Summer 2020
     <br> Advisor: <a href="http://chaos.utexas.edu/people/faculty/ernst-ludwig-florin">Dr. Florin</a>
-      <br><br><ul>This project was affected by the COVID-19 pandemic situation and could not finish it as all research labs were shut down. The goal was to be able to estimate the amount of particles moving between pixels by analyzing intensity fluctuations. This was due to the particles being too small for a DIC microscope to resolve. Check this <a href="index.html">post</a> to see more of what I managed to do in a month previous to the COVID-19 outbreak.
+      <br><br><ul>This project was affected by the COVID-19 pandemic situation and could not finish it as all research labs were shut down. The goal was to be able to estimate the amount of particles moving between pixels by analyzing intensity fluctuations. This was due to the particles being too small for a DIC microscope to resolve. Check this <a href="Research/dic.html">post</a> to see more of what I managed to do in a month previous to the COVID-19 outbreak.
       </ul>
     <br><li> <i>Bacteria biofilm and evaporation hypothesis</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Spring 2019 - Fall 2019
     <br>Advisor: <a href="http://chaos.utexas.edu/people/faculty/ernst-ludwig-florin">Dr. Florin</a>
