--- a/Research/dic.html
+++ b/Research/dic.html
@@ -8,7 +8,7 @@
   <TABLE cellSpacing=10>
   	<p style="font-size:30px">
   <tr>
-  	<td> <IMG SRC="../Media/dic.gif"style="width:240px;height:424px;"></td>
+  	<td> <video SRC="../Media/dic_trim.mp4" width=240 height=424 muted autoplay loop></td>
   <TD width=700 border="0">
 
 <p style="font-size:25px"><br><br> My research advisor, Dr. Florin, came to me one day and proposed I worked on a project one of his previous graduate students (now Dr. Foote) left unfinished. The project consisted on analyzing pixel fluctuations of DIC microscopy images to determine the movement of particles that are too small to be resolved by the microscope. 
@@ -39,7 +39,8 @@
 </tr>
 <tr>
 	<td colspan="2" width = 700>
-	<img src="../Media/sample_holder.gif">
+	<!--<img src="../Media/sample_holder.gif">-->
+	<video src="../Media/sample_holder.mp4" autoplay muted loop>
 	</td>
 </tr>
 <tr>
@@ -51,6 +52,7 @@
 	<td colspan="2" width = 700>
 	<img src="../Media/sample_holder2.jpeg" style="width:400px;height:533.33px;"><img src="../Media/sample_holder1.jpeg" style="width:400px;height:533.33px;">
 	
+	
 	</td>
 
 </tr>
@@ -61,7 +63,7 @@
 </tr>
 <tr>
 	<td colspan="2" width = 700>
-	<img src="../Media/sample_holder2.gif"style="width:400px;height:533.33px;">
+	<video src="../Media/sample_holder2.mp4" width="400" height="533.33" autoplay muted loop>
 	</td>
 </tr>
 <tr>
