--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
 </HEAD>
 <BODY bgColor=white>
-<a href="www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/research.html">Research</a>
+<a href="http://www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="http://www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/research.html">Research</a>
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
@@ -11,11 +11,11 @@
   <TR>
     <TD width=550 border="0">
       <HR>
-      <br>I am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a PhD in physics. I have interest in researching complex quantum systems, implications of relativity on quantum systems and quantum information. 
+      <br>I am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a Ph.D. in physics. I am interested in researching complex quantum systems, special and general relativity, and quantum information. 
 
   <p><b>Background</b>
-  <ul>I was born and raised in Venezuela in a sugar cane farm and alcohol distillery called Central Matilde built by my great grandparents after migrating from Cuba. Close to my highschool graduation, due to the deteriorating situation of the country, my parents decided it was best for me not get my undergraduate degree in Venezuela. I moved to Texas, spent 2 years in Austin Community College and transferred to UT as a Computer Science student. 
-  <br><br> Since highschool I have been very interested in Physics, but it wasn't until I transferred that I began to read books on quantum mechanics and found I had a special passion for it. At that time, I knew if I did not pursue this passion, I would regret it later in my life. As I was only one year away from completing my Computer Science degree, I decided to add Physics as a second major.  </ul>
+  <ul>I was born and raised in Venezuela in a sugar cane farm and alcohol distillery called Central Matilde built by my great grandparents after migrating from Cuba. Close to my highschool graduation, due to the deteriorating situation of the country, my parents decided it was best for me not to get my undergraduate degree in Venezuela. I moved to Texas, spent 2 years at Austin Community College, and then transferred to UT as a Computer Science student. 
+  <br><br>  Since high school, I have been very interested in Physics, but it wasn't until I transferred that I began to read books on quantum mechanics and found I had a special passion for it. At that time, I knew if I did not pursue this passion, I would regret it later in my life. As I was only one year away from completing my Computer Science degree, I decided to add Physics as a second major.  </ul>
 
      
 
