--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@
   <br>Location: San Jose, CA
   <br>Manager: <a href="https://www.linkedin.com/in/jklaas/"> Jeff Klaas </a>
 
-    <br><br>Improved <a href="https://en.wikipedia.org/wiki/Continuous_integration">continous integration</a> by automating device tests every time a developer modified code in the repository corresponding to such device.
+    <br><br>Improved my department's continous integration by automating device tests every time a developer modified code in the repository corresponding to such device.
 </ul>
 
 <hr>
@@ -111,10 +111,10 @@
 <hr>
 <p><b>Awards</b>
   <li>Cisco's Supply Chain case competition 1st place</li>
-    <ul>Built a Python GUI tool for managers in Cisco to track their suppliers and alert them of any customizable relevant events that may affect Cisco's supply chain. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<IMG src="Media/CaseComp.PNG" border=0 style="width:376px;height:224px;"></ul>
+    <ul>Built a Python GUI tool for managers in Cisco to track their suppliers and alert them of any customizable relevant events that may affect Cisco's supply chain. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<IMG src="http://juangmendoza.com/Media/CaseComp.PNG" border=0 style="width:376px;height:224px;"></ul>
     <li> Best sensing and Control at RAS robotathon sumo competition</li>
     <ul>This was awarded to the team that had the most precise and efficient sensing and control
-      <IMG src="Media/sensing.jpeg" border=0 style="width:250px;height:200px;">
+      <IMG src="http://juangmendoza.com/Media/sensing.jpeg" border=0 style="width:250px;height:200px;">
     </ul>
 
 <hr>
