--- a/resume.html
+++ b/resume.html
@@ -122,9 +122,9 @@
   <ul>
     Physics:
     <ul>
-      <li>Quantum Mechanics I, <a href="https://en.wikipedia.org/wiki/Steven_Weinberg">Dr. Weinberg</a> (Graduate version)
+      <li>Gruaduate Quantum Mechanics I, <a href="https://en.wikipedia.org/wiki/Steven_Weinberg">Dr. Weinberg</a> 
       <li>Quantum Information, <a href="https://en.wikipedia.org/wiki/Scott_Aaronson">Dr. Aaronson</a>
-      <li>Quantum Mechanics I, Dr. Caceres (Undergraduate version)
+      <li>Quantum Mechanics I, Dr. Caceres 
       <li>Quantum Mechanics II, Dr. Yeazell
       <li>Waves and Optics, Dr. Heinzen
       <li>Modern Physics, Dr. Sitz
