--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,10 @@
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
-    <TD vAlign=bottom border="0"><FONT face=Arial size=+3>Research</FONT><IMG src="https://www.scottaaronson.com/100.jpg" >
+    <TD vAlign=bottom border="0"><FONT face=Arial size=+3>Blog</FONT><IMG src="https://www.scottaaronson.com/100.jpg" >
 
   <TR>
 
     <TD width=700 border="0">
     <HR>
-    The purpose of this section on my website is to have a keepsake for myself of all the research I have done. I will upload all the new research I do here, especially as I start grad school in 2021.
-  	<p><b>Biophysics</b>
-  		<li> <a href="Research/dic.html"> Sub-Microscopic particle tracking</a>
+  	This page is still under construction! Here I will upload short writtings about various topics ranging from physics to coding to philosophy.
