--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </HEAD>
-<BODY bgColor=white>
-<a href="http://www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="http://www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/research.html">Research</a>
+<div id="nav-placeholder">
+
+</div>
+<script>
+$(function(){
+  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+});
+</script>
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
