--- a/research.html
+++ b/research.html
@@ -1,8 +1,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
+<HTML><HEAD><TITLE>Research</TITLE><link rel="icon" href="Media/icon.png">
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </HEAD>
-<BODY bgColor=white>
-<a href="http://www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="http://www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/research.html">Research</a>
+<div id="nav-placeholder">
+
+</div>
+
+
+
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
@@ -14,4 +19,13 @@
     <HR>
     The purpose of this section on my website is to have a keepsake for myself of all the research I have done. I will upload all the new research I do here, especially as I start grad school in 2021.
   	<p><b>Biophysics</b>
-  		<li> <a href="Research/dic.html"> Sub-Microscopic particle tracking</a>
+  		<li> <a href="Research/dic.html"> Sub-Microscopic particle tracking</a></li>
+  	</p>
+
+
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+});
+</script>
