--- a/Research/dic.html
+++ b/Research/dic.html
@@ -1,8 +1,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="../Media/icon.png">
+<HTML><HEAD><TITLE>Research</TITLE><link rel="icon" href="../Media/icon.png">
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </HEAD>
+<div id="nav-placeholder">
+
+</div>
 <BODY bgColor=white>
-<a href="http://www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="http://www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/research.html">Research</a>
+
 	<h1>Sub-Microscopic particle tracking</h1>
   
   <TABLE cellSpacing=10>
@@ -77,3 +81,9 @@
 </BODY>
 </BODY>
 </HTML>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+});
+</script>
