--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
+<HTML><HEAD><TITLE>About Me</TITLE><link rel="icon" href="Media/icon.png">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </HEAD>
 <div id="nav-placeholder">
 
 </div>
-<script>
-$(function(){
-  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
-});
-</script>
+
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
@@ -40,3 +36,10 @@ $(function(){
 </ul>
 
 </I></TD></TR></TBODY></TABLE></BODY></HTML>
+
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+});
+</script>
