--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<HTML><HEAD><TITLE>Juan G Mendoza</TITLE><link rel="icon" href="Media/icon.png">
+<HTML><HEAD><TITLE>Resume</TITLE><link rel="icon" href="Media/icon.png">
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </HEAD>
+<div id="nav-placeholder">
+
+</div>
 <BODY bgColor=white>
-<a href="http://www.juangmendoza.com/index.html">About me</a>  &nbsp; &nbsp;&nbsp;&nbsp;         <a href="http://www.juangmendoza.com/resume.html">Resume</a>&nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/blog.html">Blog</a>     &nbsp; &nbsp;&nbsp;&nbsp;                    <a href="http://www.juangmendoza.com/research.html">Research</a>
+
 <TABLE cellSpacing=10>
   <TBODY>
   <TR border="0">
@@ -145,3 +149,9 @@
 
 
 </I></TD></TR></TBODY></TABLE></BODY></HTML>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+});
+</script>
