--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <HTML><HEAD><TITLE>About Me</TITLE><link rel="icon" href="Media/icon.png">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </HEAD>
 <div id="nav-placeholder">
 
@@ -14,7 +15,7 @@
   <TR>
     <TD width=550 border="0">
       <HR>
-      <br>I am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a Ph.D. in physics. I am interested in researching complex quantum systems, special and general relativity, and quantum information. 
+      <br>Ia am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a Ph.D. in physics. I am interested in researching complex quantum systems, special and general relativity, and quantum information. 
 
   <p><b>Background</b>
   <ul>I was born and raised in Venezuela in a sugar cane farm and alcohol distillery called Central Matilde built by my great grandparents after migrating from Cuba. Close to my highschool graduation, due to the deteriorating situation of the country, my parents decided it was best for me not to get my undergraduate degree in Venezuela. I moved to Texas, spent 2 years at Austin Community College, and then transferred to UT as a Computer Science student. 
