--- a/Research/dic.html
+++ b/Research/dic.html
@@ -68,7 +68,8 @@
 </tr>
 <tr>
 	<td colspan="2" width = 700>
-	<video src="http://www.juangmendoza.com/Media/sample_holder2.mp4" width="400" height="533.33" autoplay muted loop>
+	<!--<video src="http://www.juangmendoza.com/Media/sample_holder2.mp4" width="400" height="533.33" autoplay muted loop>!-->
+	<img src="../Media/research_crop.gif">
 	</td>
 </tr>
 <tr>
