finished with index

--- a/aboutme.html
+++ b/aboutme.html
@@ -41,6 +41,6 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+  $("#nav-placeholder").load("https://www.juangmendoza.com/base.html");
 });
 </script>
