--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
     <link href="album.css" rel="stylesheet">
   </head>
 
-  <body>
+  
 
+    <body>
     <header>
       <div class="collapse bg-dark" id="navbarHeader">
         <div class="container">
           <div class="row">
-            <div class="col-sm-8 col-sm-7 py-4">
+            <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About this page</h4>
               <p class="text-muted">This website has been made 100% by me with bootstrap, I have never taken a course in web development/design so don't be too harsh!</p>
             </div>
-            <div class="col-sm-4 offset-sm-1 py-4">
+            <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="https://github.com/JuanGMendoza" class="text-white">GitHub</a></li>
-                <li><a href="https://www.youtube.com/channel/UC560ZaRh8BrtR00J4dH7PgA" class="text-white">Youtube</a></li>
+                <li><a href="https://github.com/JuanGMendoza" class="text-white"  target="_blank">GitHub</a></li>
+                <li><a href="https://www.youtube.com/channel/UC560ZaRh8BrtR00J4dH7PgA" target="_blank"class="text-white">Youtube</a></li>
                 <li class="email">JuanGMendoza@utexas.edu</li>
               </ul>
             </div>
@@ -51,7 +52,6 @@
         </div>
       </div>
     </header>
-
     <div class="container-fluid ">
       <div class="row">
 
