changed page title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
-    <title>Album example for Bootstrap</title>
+    <title>Juan G Mendoza</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/album/">
 
@@ -56,11 +56,11 @@
       <div class="row">
 
         <div class="card-deck  cardStyle my-auto" >
-            <div class="col-sm-4 card text-center " id="a">
+            <div class="col-sm-4 card text-center ">
                 <a href="https://JuanGMendoza.com/aboutme.html">
                 <img class="card-img-top" src="./Media/JuanCrop.jpg"  />
                 <div class="card-body">
-                    <h4 class="card-title links" id="b">About me</h4>
+                    <h4 class="card-title links">About me</h4>
                     
                 </div>
               </a>
@@ -93,7 +93,7 @@
         </div>
         <div class="col-sm-4">
           <div class="card text-center">
-              <a href='https://JuanGMendoza.com/research.html'>
+              <a href='https://JuanGMendoza.com/writings.html'>
                 <img class="card-img-top" src="./Media/writing.png"  />
                 <div class="card-body">
                     <h4 class="card-title links">Writings</h4>
