fixed resume a little

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 
   <TR>
 
-    <TD width=700 border="0">
+    <TD width=800 border="0">
       <a href="https://github.com/JuanGMendoza/">Github</a>
       <HR>
        
@@ -37,7 +37,7 @@
 <p><b>Research Experience</b>
     <br>All the research below was conducted in <a href="https://chaos.utexas.edu/people/undergraduate-students/juan-gonzalez-de-mendoza">The Center for Nonlinear Dynamics</a> and The Center for Complex Quantum Systems at The University of Texas at Austin
     <ul>
-    <li><i> Quantum Scattering</i>  &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Summer 2020 - Present
+    <li><i> Quantum Scattering</i>  &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Summer 2020 - Present
     <br>Advisor: <a href="http://order.ph.utexas.edu/people/Reichl.htm">Dr. Reichl</a>
 
       <br><br><ul>Analyzed Wigner and Einsenbud reaction matrix scattering theory to understand nuclear scaterring problems better.
@@ -67,7 +67,7 @@
 <ul>
   Class: PHY 302L Electricity and Magnetism, Light, Atomic and Nuclear Physics
   <br>Professor: Dr. Labun
-    <br><br>Yet to start 
+    <br><br>Assisted students in understanding electromagnetism, circuits, and modern physics concepts such as special relativity.
 </ul>
 <li> <i>Undergraduate Teaching Assistant</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Spring 2020
 <ul>
@@ -116,10 +116,10 @@
 <hr>
 <p><b>Awards</b>
   <li>Cisco's Supply Chain case competition 1st place</li>
-    <ul>Built a Python GUI tool for managers in Cisco to track their suppliers and alert them of any customizable relevant events that may affect Cisco's supply chain. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<IMG src="http://juangmendoza.com/Media/CaseComp.PNG" border=0 style="width:376px;height:224px;"></ul>
+    <ul>Built a Python GUI tool for managers in Cisco to track their suppliers and alert them of any customizable relevant events that may affect Cisco's supply chain. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<IMG src="https://juangmendoza.com/Media/CaseComp.PNG" border=0 style="width:376px;height:224px;"></ul>
     <li> Best sensing and Control at RAS robotathon sumo competition</li>
     <ul>This was awarded to the team that had the most precise and efficient sensing and control
-      <IMG src="http://juangmendoza.com/Media/sensing.jpeg" border=0 style="width:250px;height:200px;">
+      <IMG src="https://juangmendoza.com/Media/sensing.jpeg" border=0 style="width:250px;height:200px;">
     </ul>
 
 <hr>
@@ -144,8 +144,6 @@
 <br>juangmendoza@utexas.edu
 
 
-<br>Personal phone: (512)-988-2887
-
 
 
 
@@ -153,6 +151,6 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+  $("#nav-placeholder").load("https://www.juangmendoza.com/base.html");
 });
 </script>
