--- a/resume.html
+++ b/resume.html
@@ -151,6 +151,6 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("https://www.juangmendoza.com/base.html");
+  $("#nav-placeholder").load("./base.html");
 });
 </script>
