--- a/base.html
+++ b/base.html
@@ -6,8 +6,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="http://www.juangmendoza.com/index.html">About me <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="http://www.juangmendoza.com/aboutme.html">About me <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="http://www.juangmendoza.com/resume.html">Resume</a>
@@ -16,7 +16,7 @@
         <a class="nav-link" href="http://www.juangmendoza.com/research.html">Research</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://www.juangmendoza.com/writings.html" tabindex="-1" aria-disabled="true">Writings</a>
+        <a class="nav-link" href="http://www.juangmendoza.com/writings.html">Writings</a>
       </li>
     </ul>
   </div>
