added youtube link

--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,10 @@
   <TR>
 
     <TD width=800 border="0">
-      <a href="https://github.com/JuanGMendoza/">Github</a>
+      <a href="https://github.com/JuanGMendoza/">Github</a> | 
+      <a href="https://www.youtube.com/channel/UC560ZaRh8BrtR00J4dH7PgA">
+       Youtube
+      </a>
       <HR>
        
 
