fixed navbar on all pages (maybe)

--- a/research.html
+++ b/research.html
@@ -27,6 +27,6 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+  $("#nav-placeholder").load("./base.html");
 });
 </script>
