--- a/Research/dic.html
+++ b/Research/dic.html
@@ -85,6 +85,6 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("http://www.juangmendoza.com/base.html");
+  $("#nav-placeholder").load("../base.html");
 });
 </script>
