--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,6 @@
 <br>juangmendoza@utexas.edu
 
 
-<br>Personal phone: (512)-988-2887
 
 
 </ul>
@@ -41,6 +40,6 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("https://www.juangmendoza.com/base.html");
+  $("#nav-placeholder").load("./base.html");
 });
 </script>
