first blog entry

--- a/writings.html
+++ b/writings.html
@@ -17,6 +17,11 @@
     <TD width=700 border="0">
     <HR>
   	This page is still under construction! Here I will upload short writtings about various topics ranging from physics to coding to philosophy.
+  <HR>
+  	<h4>Blog</h4>
+  	<ul>
+  		<li><a href="blog1.html">Fall semester start 09/11/20 </a></li>
+  	</ul>
 
 
 
