--- a/aboutme_bts.html
+++ b/aboutme_bts.html
@@ -10,22 +10,17 @@
 
 <body>
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-2 col-md-2 col-xs-2">
-			</div>
-			<div class="col-lg-4 col-md-4 col-xs-4 my-auto">
-			<h1 > Juan G Mendoza</h1>
-			
-			</div>
-			<div class="col-lg-2 col-md-2 col-xs-2">
-				<div class="card-deck  cardStyle my-auto" >
+		<div class="row test">
+			<div class="col-lg-12 col-md-12 col-xs-12 text-center">
+			 Juan G Mendoza
+			<div class="card-deck  cardStyle" >
 					<div class="card">
 						<img class="card-img-top" src="./Media/Juan.png">
 					</div>
-				</div>
 			</div>
-			<div class="col-lg-2 col-md-2 col-xs-2">
+			
 			</div>
+			
 
 
 		</div>
@@ -38,6 +33,6 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("https://www.juangmendoza.com/base.html");
+  $("#nav-placeholder").load("./base.html");
 });
 </script>
